--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "homepage": "http://senorejuan.github.io/SirJuan",
   "dependencies": {
+    "@sweetalert2/theme-wordpress-admin": "^4.0.3",
     "classnames": "2.2.6",
+    "emailjs": "^3.4.0",
+    "emailjs-com": "^2.6.4",
     "moment": "2.26.0",
     "node-sass": "4.14.1",
     "nouislider": "14.5.0",
@@ -16,7 +19,10 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
-    "reactstrap": "8.4.1"
+    "reactstrap": "8.4.1",
+    "sweetalert2": "^10.15.6",
+    "toast-me": "^1.3.2",
+    "toastr": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
