--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
-    "reactstrap": "8.4.1"
-
+    "reactstrap": "8.4.1",
+    "sweetalert2": "^11.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
